tests/fixtures/valid/void_return.dub
fun early_exit(x: int) {
    if (x == 0) {
        return;
    }
    return;
}
