tests/fixtures/invalid/bare_integer.dub
fun bad(x: integer) -> int {
    return 0;
}
